// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty taf renders empty 1`] = `
<div
  class="tafs"
>
  <div>
    No TAF is issued for this station.
  </div>
</div>
`;

exports[`no taf renders empty 1`] = `
<div
  class="tafs"
>
  <div>
    No TAF is issued for this station.
  </div>
</div>
`;

exports[`taf renders properly 1`] = `
<div
  class="tafs"
>
  <div
    class="notif-text"
  >
    TAF CYUL 071739Z 0718/0818 22012G22KT P6SM SCT020 BKN120 TEMPO 0718/0724 BKN020 OVC120
  </div>
  <div
    class="notif-text"
  >
    FM080000 23012G22KT P6SM −SHRA BKN020 OVC220
  </div>
  <div
    class="notif-text"
  >
    FM080300 26008KT P6SM FEW050
  </div>
  <div
    class="notif-text"
  >
    RMK NXT FCST BY 072100Z
  </div>
</div>
`;

exports[`taf renders properly 2`] = `
<div
  class="tafs"
>
  <div
    class="notif-text"
  >
    KJFK 071720Z 0718/0824 19016G22KT P6SM SCT025 BKN100
  </div>
  <div
    class="notif-text"
  >
    FM072300 25010KT P6SM VCSH SCT035 BKN050
  </div>
  <div
    class="notif-text"
  >
    FM080100 34010KT 3SM SHRA BR FEW008 OVC025
  </div>
  <div
    class="notif-text"
  >
    FM080600 36009KT 6SM BR VCSH SCT015 OVC050
  </div>
  <div
    class="notif-text"
  >
    FM080900 01008KT P6SM BKN050
  </div>
  <div
    class="notif-text"
  >
    FM081500 03012G18KT P6SM SCT030 BKN060
  </div>
  <div
    class="notif-text"
  >
    FM082000 04012KT P6SM SCT100
  </div>
</div>
`;

exports[`taf renders properly 3`] = `
<div
  class="tafs"
>
  <div
    class="notif-text"
  >
    TAF EGLL 071656Z 0718/0824 19012KT 9999 BKN010 TEMPO 0718/0722 3000 RADZ BKN005 BECMG 0720/0723 25008KT FEW030 TEMPO 0813/0819 25016G26KT 7000 SHRA
  </div>
  <div
    class="notif-text"
  >
    PROB30 TEMPO 0814/0818 3500 +SHRA
  </div>
</div>
`;

exports[`taf renders properly 4`] = `
<div
  class="tafs"
>
  <div>
    No TAF is issued for this station.
  </div>
</div>
`;

exports[`taf renders properly 5`] = `
<div
  class="tafs"
>
  <div>
    No TAF is issued for this station.
  </div>
</div>
`;
